--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,10 @@
 {
-  "name": "My Drama Life TV",
-  "short_name": "Drama TV",
-  "start_url": ".",
+  "background_color": "#1b1b1b",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#FF0000",
-  "icons": [
-    {
-      "src": "/icona_app_mobile.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/icona_app_tv.png",
-      "sizes": "1024x1024",
-      "type": "image/png", // <== CORRETTO! Deve essere "image/png"
-      "purpose": "maskable"
-    }
-  ]
+  "name": "My Drama Life TV",
+  "orientation": "any",
+  "scope": "/",
+  "short_name": "My Drama Life TV",
+  "start_url": "/",
+  "theme_color": "#e02484"
 }
