--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,24 @@
 {
-  "background_color": "#1b1b1b",
-  "display": "standalone",
   "name": "My Drama Life TV",
-  "orientation": "any",
-  "scope": "/",
-  "short_name": "My Drama Life TV",
+  "short_name": "MyDrama",
   "start_url": "/",
-  "theme_color": "#e02484"
+  "display": "standalone",
+  "background_color": "#1b1b1b",
+  "theme_color": "#e02484",
+  "orientation": "landscape",
+  "description": "L'app di My Drama Life Fansub",
+  "icons": [
+    {
+      "src": "/icona_app_mobile.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icona_app_tv.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
 }
