--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,18 @@
 {
-  "background_color": "#1b1b1b",
+  "background_color": "#000000",
   "display": "standalone",
-  "name": "My Drama Life TV",
-  "orientation": "any",
+  "name": "My Drama Life",
+  "orientation": "landscape",
   "scope": "/",
-  "short_name": "My Drama Life TV",
+  "short_name": "MyDramaLife",
   "start_url": "/",
-  "theme_color": "#e02484"
+  "theme_color": "#e91e8c",
+  "icons": [
+    {
+      "src": "/icona_app_mobile.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
 }
